@@ -71,6 +71,21 @@ def add_internal_flag(element, root):
         root["is_internal"] = True
 
 
+# Add source file/line information, if known
+def add_source_file_and_line(element, root):
+    source_file = element.get_source_filename()
+    source_line = element.get_source_line()
+
+    if (source_file is not None) or (source_line is not None):
+        source_info = {}
+        root["source_location"] = source_info
+
+        if source_file is not None:
+            source_info["filename"] = source_file
+        if source_line is not None:
+            source_info["line"] = source_line
+            
+            
 # Emit type comprehension storage classes
 def emit_type_comprehension_storage_classes(container, storage_classes):
     if len(storage_classes) > 0:
@@ -239,6 +254,7 @@ def emit_enum_element(enum):
     add_comments(enum, result)
     add_preprocessor_conditionals(enum, result)
     add_internal_flag(enum, result)
+    add_source_file_and_line(enum, result)
 
     return result
 
@@ -263,6 +279,7 @@ def emit_enum(enum):
     add_comments(enum, result)
     add_preprocessor_conditionals(enum, result)
     add_internal_flag(enum, result)
+    add_source_file_and_line(enum, result)
 
     return result
 
@@ -276,6 +293,7 @@ def emit_typedef(typedef):
     add_comments(typedef, result)
     add_preprocessor_conditionals(typedef, result)
     add_internal_flag(typedef, result)
+    add_source_file_and_line(typedef, result)
 
     return result
 
@@ -304,9 +322,10 @@ def emit_field(container, field):
         # Emit the type
         field_data["type"] = emit_type(field.field_type, declaration_suffix)
 
-        add_comments(field, field_data)
-        add_preprocessor_conditionals(field, field_data)
-        add_internal_flag(field, field_data)
+	    add_comments(field, result)
+	    add_preprocessor_conditionals(field, result)
+	    add_internal_flag(field, result)
+	    add_source_file_and_line(field, result)
 
         container.append(field_data)
 
@@ -361,6 +380,7 @@ def emit_struct(struct):
     add_comments(struct, result)
     add_preprocessor_conditionals(struct, result)
     add_internal_flag(struct, result)
+    add_source_file_and_line(struct, result)
 
     return result
 
@@ -430,6 +450,7 @@ def emit_function(function):
     add_comments(function, result)
     add_preprocessor_conditionals(function, result)
     add_internal_flag(function, result)
+    add_source_file_and_line(function, result)
 
     return result
 
@@ -448,6 +469,7 @@ def emit_define(define):
     add_comments(define, result)
     add_preprocessor_conditionals(define, result)
     add_internal_flag(define, result)
+    add_source_file_and_line(define, result)
 
     return result
 
